--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,13 @@ POSTGRES_PASSWORD=postgres
 # PGAdmin
 PGADMIN_DEFAULT_EMAIL=postgres
 PGADMIN_DEFAULT_PASSWORD=postgres
+PGADMIN_LISTEN_PORT=15432
+
+# General
+TZ=Europe/Moscow
+
+# Backend
+BACKEND_PORT=8080
+DDL_MODE=create-drop
+
+
