feat: basic auth added

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ TZ=Europe/Moscow
 
 # Backend
 BACKEND_PORT=8080
-DDL_MODE=create-drop
+DDL_MODE=update
+JWT_SECRET=secret
+JWT_ACCESS_TTL=2592000000
+JWT_REFRESH_TTL=2592000000
 
 
