--- a/compose.yml
+++ b/compose.yml
@@ -51,6 +51,9 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_ACCESS_TTL=${JWT_ACCESS_TTL}
+      - JWT_REFRESH_TTL=${JWT_REFRESH_TTL}
     healthcheck:
       <<: *healthcheck
       test: ["CMD", "curl", "-f", "http://localhost:${BACKEND_PORT}/actuator/health"]
