feat: doing security...

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     driverClassName: org.postgresql.Driver
 
   jackson:
-    time-zone: ${TZ}
+    time-zone: ${TZ:UTC}
 
   jpa:
     hibernate:
