--- a/compose.yml
+++ b/compose.yml
@@ -16,6 +16,8 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+      - TZ=${TZ}
+      - POSTGRES_INITDB_ARGS=--timezone=${TZ}
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
