fix: applicaiton.yml

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: optional:file:../.enmv[.properties]
+    import: optional:file:../.env[.properties]
 
   datasource:
     name: ${POSTGRES_DB:postgres}
